# VSCode-Programs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.me  c_deco.py  cmds  comprehension.py  custom_sort_with_multiple_lists.py  deco.py  exit_code.py  interview.py  k_means.py  macOS.py  mul_test.py  nlp.py  pd_test.py  pdf_to_word_kri.py  prog.py  pyproject.toml  requirements.txt  stop.py  test.py  test3.py  testP.py  test_assert.py  test_file.py  testglobal.py  testmain1.py  testmain2.py  th.py  token_code.py
NumpyProject/: image_manipulation.ipynb
code/: README.md  c_deco.py  comprehension.py  custom_sort_with_multiple_lists.py  get-pip.py  interview.py  k_means.py  mul_test.py  nlp.py  pd_test.py  pdf_to_word_kri.py  progr.py  requirements.txt  stop.py  test.py  testmain1.py  testmain2.py  th.py
docker/: mssql.Dockerfile
extraction/: fb2.py  fb3.py  fb_extraction.py
general/: fString.ipynb  fString.py
interview/: Longest unique substring.py  anagrams.py  find_max_unique_str.py
interview questions/: square_check.py  third_largest.py
pandas_linkedin_essential_code/: Ch01 Using pandas.ipynb  Ch02 Series and DataFrames.ipynb  Ch03 Data input and validation.ipynb  Ch04 Basic Analysis Solution.ipynb  Ch04 Basic Analysis.ipynb  Ch05 Basic Plotting Solution.ipynb  Ch05 Basic plotting.ipynb  Ch06 Indexing Solution.ipynb  Ch06 Indexing.ipynb  Ch07 Groupby Solution.ipynb  Ch07 Groupby.ipynb  Ch08 Solution.ipynb  Ch08 stack() and unstack().ipynb  Ch09 Data visualizations.ipynb  Ch10 Solution.ipynb
tests/: krishna_test.py  mul_test.py  ok_test.py  (+1 more)
(+36 files in other folders)
