[tool.poetry]
name = "data-engineer-project"
version = "0.1.0"
description = "practise_questions"
authors = ["KRISHNA DIPAYAN BHUNIA <krishnabhunia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "^2.2.3"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
